# uefi-boot-mgr

./: Cargo.toml  README.md  templates.json
.github/: copilot-instructions.md
src/: error.rs  lib.rs  main.rs
src/cli/: backup.rs  create.rs  delete.rs  edit.rs  esp.rs  info.rs  list.rs  mod.rs  next.rs  order.rs  restore.rs  toggle.rs
src/core/: backup.rs  entry.rs  esp.rs  manager.rs  mod.rs  privilege.rs
src/tui/: app.rs  event.rs  mod.rs  widgets.rs
src/tui/views/: backup.rs  bootloader.rs  entry_detail.rs  entry_form.rs  entry_list.rs  help.rs  mod.rs  wizard.rs
tests/: cli_tests.rs  core_tests.rs  tui_tests.rs
