[package]
name = "uefibootmgrrs"
version = "0.1.0"
edition = "2024"

[dependencies]
efivar = { version = "2.0.0", features = ["store"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
dialoguer = "0.11"
